[package]
name = "rust-tools"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
indicatif = {version = "0.17.0-beta.1", features = ["rayon"]}
chrono = "0.4"
log = "0.4"
fern = "0.5"

rand = "0.8.4"
rayon = "1.5"

serde = "1"
serde_json = "1"

xml-rs = "0.8"